@@ -1,3 +1,6 @@
+200909__ mnemogogo-0.9.5
+* MAJOR CHANGE: new export/import format
+
 20090905 mnemogogo-0.9.4
 * Randomize the choice of new cards.
 * No longer crashes when a file cannot be removed.
